[gd_scene load_steps=2 format=3 uid="uid://cy2f85iqat6q0"]

[ext_resource type="Script" uid="uid://k56vr57ckxdb" path="res://Components/TimeTaskHandler/time_task_handler.gd" id="1_w7lw1"]

[node name="TimeTaskHandler" type="Node2D"]
script = ExtResource("1_w7lw1")

[node name="TimeToCompletion" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(150, 0)
offset_left = -36.0
offset_right = 114.0
offset_bottom = 4.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[connection signal="timeout" from="TimeToCompletion" to="." method="_complete_task"]
